--- a/examples/rust/digital_signature/Cargo.toml
+++ b/examples/rust/digital_signature/Cargo.toml
@@ -12,3 +12,4 @@ zkvm-core = { path = "../../../risc0/zkvm/sdk/rust/core" }
 zkvm-host = { path = "../../../risc0/zkvm/sdk/rust/host" }
 zkvm-serde = { path = "../../../risc0/zkvm/sdk/rust/serde" }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde_json = "1.0"
