--- a/risc0/zkvm/sdk/rust/serde/Cargo.toml
+++ b/risc0/zkvm/sdk/rust/serde/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 zkvm-core = { path = "../core" }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
+serde_json = "1.0"
